2008-08-12  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_select_jellybean):
	some fixes of directional selections.

2008-08-12  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: reposition cursor after whitespace where
	possible. Also improved whitespace addition as user starts typing
	tags.

2008-08-11  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/core/gimptag.c: fixed case insensitive tag handling.

2008-08-10  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagpopup.c (gimp_tag_popup_border_event): disable
	single selection mode when mouse button is release outside popup
	window.

2008-08-10  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c
	(gimp_tag_entry_strip_extra_whitespace): reposition cursor after a
	whitespace when there are no tags before (last position).

2008-08-10  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.[ch]: tab key cycles completion variants.

2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: add space when insert tag in the middle
	of tags list.

2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: some auto-completion tweaks.

2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c: force policy where there is one space
	after each tag's separator.

2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_select_jellybean): try to
	select closest tag on delete only when there is no selection already.

2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimpcombotagentry.c
	* app/widgets/gimptagentry.c
	* app/widgets/gimptagentry.h: do not popup tag list when there are no
	possible selections.

2008-08-09  Aurimas Juška  <aurisj@svn.gnome.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_add_to_recent):
	disable add to recently used tag list when working in tag assignment
	mode.
