@@ -1,5 +1,13 @@
 2008-08-12  Aurimas Juška  <aurisj@svn.gnome.org>
 
+	* app/core/gimpfilteredcontainer.[ch]
+	* app/core/gimptag.[ch]
+	* app/widgets/gimptagentry.c
+	* app/widgets/gimptagpopup.h: improvements and fixes for documentation
+	reference comments.
+
+2008-08-12  Aurimas Juška  <aurisj@svn.gnome.org>
+
 	* app/widgets/gimptagentry.c (gimp_tag_entry_select_jellybean):
 	some fixes of directional selections.
 
